feat: review and recover collection results
